--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
   <div class="container welcome" id="welcome-container">
     <h2>Welcome, <span id="display-name"></span>!</h2>
     <p>Your Roll Number: <span id="display-roll-number"></span></p>
-    <a href="ktf/index.html">
+    <a href="ktf/">
       <button>Proceed to Quiz</button>
     </a>
   </div>
