--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="header">
     <img src="mono.png" alt="Karawan-e-Taleem Foundation Monogram" class="monogram">
     <h1>Karawan-e-Taleem Foundation</h1>
-    <p>Empowering Education for a Better Future</p>
+    <p>Empowering Education for a Better Future ...</p>
   </div>
 
   <div class="container" id="login-container">
@@ -77,7 +77,7 @@
   <div class="container welcome" id="welcome-container">
     <h2>Welcome, <span id="display-name"></span>!</h2>
     <p>Your Roll Number: <span id="display-roll-number"></span></p>
-    <a href="ktf/">
+    <a href="KTF/">
       <button>Proceed to Quiz</button>
     </a>
   </div>
