--- a/KTF/index.html
+++ b/KTF/index.html
@@ -13,19 +13,19 @@
 	<div class="home-box custom-box">
 		<h3>Instructions</h3>
 		<p>Total number of questions: <span class="total-question"></span></p>
-		<p>You can attempt the quiz multiple times</p>
+		<p>You can click correct option only once </p>
 		<p>Each question carries one point. No negative marking for wrong answers</p>
-		<p>Questions are of Multiple Choice</p>
+		<p>Questions are of Multiple Choice  </p>
 		<button type="button" class="btn" onclick="startQuiz()">Start Quiz</button>
-		<label for="topic">Choose Topic:</label>
+		<!-- <label for="topic">Choose Topic:</label> -->
 
-		<select name="topic" id="topic">
-			<!-- <option value="sports">Sports</option>
+		<!-- <select name="topic" id="topic">
+			 <option value="sports">Sports</option>
 			<option value="logic">Logic</option>
 			<option value="gk">GK</option>
 			<option value="computer">Computer</option> -->
-            <option value="math">Math</option>
-		</select>
+            <!-- <option value="math">Math</option> -->
+		<!-- </select> -->  
 	</div>
 
  <!-- dk ========================= -->
@@ -110,7 +110,7 @@
                 <td><span class="total-score"></span></td>
             </tr>
         </table>
-        <button type="button" class="btn try-again-btn" onclick="tryAgain()">Try Again</button>
+        <!-- <button type="button" class="btn try-again-btn" onclick="tryAgain()">Try Again</button> -->
         <button type="button" class="btn go-home-btn" onclick="goToHome()">Go To Home</button>
     </div>
 
