--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <div class="header">
     <img src="mono.png" alt="Karawan-e-Taleem Foundation Monogram" class="monogram">
     <h1>Karawan-e-Taleem Foundation</h1>
-    <p>Empowering Education for a Better Future ...</p>
+    <p>Empowering Education for a Better Future *</p>
   </div>
 
   <div class="container" id="login-container">
