--- a/index.html
+++ b/index.html
@@ -74,6 +74,27 @@
      
 
                     <p>I am working as a Postdoctoral researcher with <a href="https://cemse.kaust.edu.sa/viola">Professor Ivan Viola</a> in the Nanovisualization Research Group, KAUST, Saudi Arabia.</p>
+
+                    I earned my Ph.D. in Computer Science from the 
+<a href="http://nlpr-web.ia.ac.cn/" target="_blank" ">
+National Laboratory of Pattern Recognition (NLPR)
+</a>, 
+<a href="http://english.ia.cas.cn/" target="_blank" >
+Institute of Automation, Chinese Academy of Sciences (CASIA)
+</a>, under the supervision of 
+<a href="http://people.ucas.ac.cn/~zhangxiaopeng?language=en" target="_blank" ">
+Prof. Xiaopeng Zhang
+</a> and 
+<a href="http://sites.google.com/site/yandongming/" target="_blank" )">
+Prof. Dong-Ming Yan
+</a>.
+
+Soon after completing my Ph.D., I worked as an Assistant Professor with 
+<a href="https://imd.naist.jp/" target="_blank">
+Prof. Hirokazu Kato
+</a> (the inventor of ARToolKit) at the  <a href="https://imd.naist.jp/" target="_blank">IMD-Interactive Media Design Lab,</a> <a href="https://www.naist.jp/en/">Nara Institute of Science and Technology (NAIST)</a>, Japan.
+ 
+
                     <p>My research interests include Computer Graphics, Visualization, Virtual Reality, 3D Deep Learning, and Human-AI interactions.</p>
                 </div>
             </div>
