--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ Prof. Hirokazu Kato
             <!-- LoXR Paper -->
             <!-- <p>
                 <br />
-                <img src="./images/LoXR4Nanovis.jpg" alt="LoXR" align ="left" width="320" height="228" style="margin:0px 20px 0px 0px">
+                <img src="./images/LoXR4Nanovis2.jpg" alt="LoXR" align ="left" width="320" height="228" style="margin:0px 20px 0px 0px">
                 <a  a href="https://www.nanovis.org/Loxr.html" target="_blank" style="font-weight:bold;color:rgb(11,83,148)">
                    LoXR: Performance Evaluation of Locally Executing LLMs on XR Devices</a><br />
                    <a href="https://cemse.kaust.edu.sa/profiles/dawar-khan">Dawar Khan</a>, 
@@ -126,7 +126,7 @@ Prof. Hirokazu Kato
                 <div style="display: flex; align-items: flex-start;">
                     <!-- Image -->
                     <div style="margin-right: 10px;">
-                        <img src="./images/LoXR4Nanovis.jpg" alt="LoXR" width="280" height="200">
+                        <img src="./images/LoXR4Nanovis2.jpg" alt="LoXR" width="280" height="200">
                     </div>
                 
                     <!-- Right Side Content -->
