--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ Prof. Hirokazu Kato
 <div style="display: flex; align-items: flex-start;">
     <!-- Image -->
     <div style="margin-right: 10px;">
-        <img src="./images/CVT.jpg" alt="Improving Regularity of the Centroidal Voronoi Tessellation" width="290" height="140">
+        <img src="./images/cvt2.jpg" alt="Improving Regularity of the Centroidal Voronoi Tessellation" width="290" height="140">
     </div>
 
     <!-- Right Side Content -->
