--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#pub">Publications</a></li>
-                    <li><a href="https://sites.google.com/site/dawarkhancs/academic-projects?authuser=0">Photo Galary</a></li>
+                    <li><a href="https://sites.google.com/site/dawarkhancs/academic-projects?authuser=0">Photos Gallery</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
