--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@ Prof. Hirokazu Kato
                 <li><a href="https://www.facebook.com/dawar.khan.712" class="icon brands circle fa-facebook"><span class="label">Facebook</span></a></li>
                 <li><a href="https://www.youtube.com/@dawarkhan-cs" class="icon brands circle fa-youtube"><span class="label">YouTube</span></a></li>
                 <li><a href="https://www.linkedin.com/in/dawar-khan-a1885b77/" class="icon brands circle fa-linkedin"><span class="label">LinkedIn</span></a></li>
-                <li><a href="https://www.researchgate.net/profile/Dawar-Khan" class="icon brands circle fa-researchgate"><span class="label">ResearchGate</span></a></li>
+                <li><a href="https://www.researchgate.net/profile/Dawar-Khan-3" class="icon brands circle fa-researchgate"><span class="label">ResearchGate</span></a></li>
 
                 <li><a href="https://scholar.google.com/citations?hl=en&user=znqOEu4AAAAJ" class="icon brands circle"><i class="fas fa-graduation-cap"></i><span class="label">Google Scholar</span></a></li>
 
