--- a/contact.html
+++ b/contact.html
@@ -25,15 +25,16 @@
         }
         #banner {
             width: 100%;
-            height: 300px;
+            height: 2px;
             background: url('./images/banner1.jpg') no-repeat center center;
             background-size: cover;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
+            align-items: right;
+            justify-content: right;
+            color: rgb(250, 245, 248);
+            /* background: yellow; */
             text-align: center;
-            font-size: 24px;
+            font-size: 14px;
             font-weight: bold;
         }
     </style>
@@ -55,8 +56,8 @@
         </header>
 
         <!-- Banner -->
-        <!-- <section id="banner"> Computer Graphics, Visualization, XR, HCI and AI. >
-        </section> -->
+        <section id="banner"> Computer Graphics, Visualization, XR, HCI and AI
+        </section>
 
         <!-- Profile Section -->
         <section id="profile" class="wrapper style4 container special-alt">
