--- a/index.html
+++ b/index.html
@@ -23,19 +23,20 @@
         #header-container nav ul li {
             margin: 0 10px;
         }
-        #banner {
+        /* #banner {
             width: 100%;
-            height: 300px;
+            height: 2px;
             background: url('./images/banner1.jpg') no-repeat center center;
             background-size: cover;
             display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
+            align-items: right;
+            justify-content: right;
+            color: rgb(250, 245, 248);
+            /* background: yellow; */
             text-align: center;
-            font-size: 24px;
+            font-size: 14px;
             font-weight: bold;
-        }
+        } */
     </style>
 </head>
 <body class="index is-preload">
@@ -55,7 +56,7 @@
         </header>
 
         <!-- Banner -->
-        <!-- <section id="banner"> Computer Graphics, Visualization, XR, HCI and AI. >
+        <!-- <section id="banner" > Computer Graphics, Visualization, XR, HCI and AI 
         </section> -->
 
         <!-- Profile Section -->
