--- a/contact.html
+++ b/contact.html
@@ -56,8 +56,8 @@
         </header>
 
         <!-- Banner -->
-        <section id="banner"> Computer Graphics, Visualization, XR, HCI and AI
-        </section>
+        <!-- <section id="banner"> Computer Graphics, Visualization, XR, HCI and AI
+        </section> -->
 
         <!-- Profile Section -->
         <section id="profile" class="wrapper style4 container special-alt">
