--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,8 @@
         }
     </style>
 </head>
-<body class="index is-preload">
+
+<body class="container">
     <div id="page-wrapper">
 
         <!-- Header -->
