--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
         } */
     </style>
 </head>
-<body class="index is-preload">
+<!-- <body class="index is-preload"> -->
+    <body class="container">
     <div id="page-wrapper">
 
         <!-- Header -->
@@ -1178,8 +1179,8 @@ Prof. Hirokazu Kato
 </div>
         
         <!-- FlagCounter Visitor Counter --> 
-    New site:  <a href="https://info.flagcounter.com/OpdF"><img src="https://s01.flagcounter.com/count2/OpdF/bg_FFFFFF/txt_000000/border_CCCCCC/columns_6/maxflags_30/viewers_0/labels_1/pageviews_1/flags_1/percent_0/" alt="Flag Counter" border="0"></a>
-    Total: <img src="https://s01.flagcounter.com/count/FLHY/bg_FFFFFF/txt_000000/border_CCCCCC/columns_6/maxflags_30/viewers_1/labels_1/pageviews_1/flags_1/" alt="Flag Counter" border="0">
+    New site:  <a href="https://info.flagcounter.com/OpdF"><img src="https://s01.flagcounter.com/count2/OpdF/bg_FFFFFF/txt_000000/border_CCCCCC/columns_6/maxflags_30/viewers_1/labels_1/pageviews_1/flags_1/percent_0/" alt="Flag Counter" border="0"></a>
+    <br>Total: <img src="https://s01.flagcounter.com/count/FLHY/bg_FFFFFF/txt_000000/border_CCCCCC/columns_6/maxflags_30/viewers_1/labels_1/pageviews_1/flags_1/" alt="Flag Counter" border="0">
   </a>
   
   
