--- a/contact.html
+++ b/contact.html
@@ -45,14 +45,14 @@
 <body class="container">
     <div id="page-wrapper">
 
-        <!-- Header -->
+        <!-- Header --> 
         <header id="header-container">
             <h2> <b>Dawar Khan</b></h2>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="index.html#pub">Publications</a></li>
-                    <li><a href="index.html">CV</a></li>
+                    <li><a href="https://sites.google.com/site/dawarkhancs/academic-projects?authuser=0">Photos Gallery</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </nav>
