--- a/index.html
+++ b/index.html
@@ -226,8 +226,9 @@ Prof. Hirokazu Kato
             </a> <br />
 
             [<a href="https://www.nanovis.org/Midsurfer.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
-            [<a href="#" target="_blank" style="color:rgb(11,83,148)">Video</a>]
-            [<a href="#" target="_blank" style="color:rgb(11,83,148)">Source Code</a>]
+            [<a href="https://www.youtube.com/watch?v=aj_UzkKL0-s" target="_blank" style="color:rgb(11,83,148)">Video Demo</a>]
+            [<a href="https://github.com/kaust-vislab/MidSurfer" target="_blank" style="color:rgb(11,83,148)">Source Code</a>]
+            [<a href="https://arxiv.org/abs/2405.19339" target="_blank" style="color:rgb(11,83,148)">Paper</a>]
 
             <a href="data:text/plain;charset=utf-8,@article{MidSurfer2024,
                 author    = {Eva Boneš and Dawar Khan and Ciril Bohak and Benjamin A. Barad and Danielle A. Grotjahn and Ivan Viola and Thomas Theußl},
@@ -372,7 +373,8 @@ Prof. Hirokazu Kato
 
             [<a href="https://www.nanovis.org/DrKID.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
             [<a href="https://www.youtube.com/watch?v=1MByeDBLgK0" target="_blank" style="color:rgb(11,83,148)">Video</a>]
-            [<a href="https://www.youtube.com/watch?v=sLQKDHY370A" target="_blank" style="color:rgb(11,83,148)">Presentation</a>]
+            [<a href="https://www.youtube.com/watch?v=sLQKDHY370A" target="_blank" style="color:rgb(11,83,148)">Presentation (11mins) </a>]
+            [<a href="https://www.youtube.com/watch?v=c1LXU29s78A&t=557s" target="_blank" style="color:rgb(11,83,148)">Presentation (30 mins) </a>]
             [<a href="https://ieeexplore.ieee.org/document/10290929?fbclid=IwAR0cjTQtf57eHWUJjS16YQ6BqwbVv9x2xS3ExZ0b7OlOp-Ib0d9WbEKBj_0" target="_blank" style="color:rgb(11,83,148)">Paper</a>]
 
             <a href="data:text/plain;charset=utf-8,@article{Khan:2023:DrKID,
