--- a/index.html
+++ b/index.html
@@ -74,31 +74,29 @@
                     <header>
                         <h2  style=  "color: black;"><b>Biography</b></h2>
                     </header> 
+ <p style="color: black; text-align: justify;">
+    I am working as a Postdoctoral Researcher with 
+    <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola" target="_blank">Professor Ivan Viola</a> 
+    in the <a href="https://www.nanovis.org/" target="_blank">Nanovisualization Research Group</a> at 
+    <a href="https://www.kaust.edu.sa/en/" target="_blank">KAUST</a>, Saudi Arabia. 
+    I earned my Ph.D. in Computer Science from the 
+    <a href="http://nlpr-web.ia.ac.cn/" target="_blank">National Laboratory of Pattern Recognition (NLPR)</a>, 
+    <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation, Chinese Academy of Sciences (CASIA)</a>, 
+    under the supervision of 
+    <a href="http://people.ucas.ac.cn/~zhangxiaopeng?language=en" target="_blank">Prof. Xiaopeng Zhang</a> 
+    and 
+    <a href="http://sites.google.com/site/yandongming/" target="_blank">Prof. Dong-Ming Yan</a>, in 2018. 
+    Soon after completing my Ph.D., I worked as an Assistant Professor with 
+    <a href="https://imdl.naist.jp/people/hirokazukato/" target="_blank">Prof. Hirokazu Kato</a> 
+    (the inventor of ARToolKit) at the 
+    <a href="https://imd.naist.jp/" target="_blank">IMD–Interactive Media Design Lab</a>, 
+    <a href="https://www.naist.jp/en/" target="_blank">Nara Institute of Science and Technology (NAIST)</a>, Japan. 
+    I later served as an Assistant Professor at the University of Haripur, Pakistan, before joining KAUST.
+</p>
+<p style="color: black; text-align: justify;">
+    My research interests include computer graphics, visualization, VR, 3D deep learning, HCI, and human-AI interaction, with a recent focus on leveraging LLMs/VLMs for XR, 3D scene understanding, and HCI.
+</p>
 
-                    <p style= "color: black; "> I am working as a Postdoctoral researcher with <a href="cemse.kaust.edu.sa/profiles/ivan-viola">Professor Ivan Viola</a> in the <a href="https://www.nanovis.org/"> Nanovisualization Research Group</a>, 
-                        <a href="https://www.kaust.edu.sa/en/"> KAUST </a>, Saudi Arabia.</p>
-
-                    <p style= "color: black; ">    I earned my Ph.D. in Computer Science from the 
-<a href="http://nlpr-web.ia.ac.cn/" target="_blank" ">
-National Laboratory of Pattern Recognition (NLPR)
-</a>, 
-<a href="http://english.ia.cas.cn/" target="_blank" >
-Institute of Automation, Chinese Academy of Sciences (CASIA)
-</a>, under the supervision of 
-<a href="http://people.ucas.ac.cn/~zhangxiaopeng?language=en" target="_blank" ">
-Prof. Xiaopeng Zhang
-</a> and 
-<a href="http://sites.google.com/site/yandongming/" target="_blank" )">
-Prof. Dong-Ming Yan
-</a>.
-
-Soon after completing my Ph.D., I worked as an 
-Assistant Professor with 
-<a href="https://imdl.naist.jp/people/hirokazukato/" target="_blank">
-Prof. Hirokazu Kato
-</a> (the inventor of ARToolKit) at the  <a href="https://imd.naist.jp/" target="_blank">IMD-Interactive Media Design Lab,</a> <a href="https://www.naist.jp/en/">Nara Institute of Science and Technology (NAIST)</a>, Japan.
-
-<p style= "color: black; "> My research interests include Computer Graphics, Visualization, Virtual Reality, 3D Deep Learning, and Human-AI interactions.</p> 
 <p style="text-align: center; font-size: 16px; color: red; font-weight: bold;"> ** I am actively seeking a faculty or research scientist  position.</p>
 <div style="display: flex; align-items: center; justify-content: flex-end; gap: 15px;">
     <p style="color: black; margin: 0;"> <b>Connect with Me:</b> </p>
@@ -474,6 +472,59 @@ Prof. Hirokazu Kato
         </div>
     </div>
 </div>
+
+
+<!-- Brain MRI and CP Association Paper -->
+<div style="display: flex; align-items: flex-start; margin-top: 20px;">
+    <!-- Image -->
+    <div style="margin-right: 10px;">
+        <img src="./images/mri.jpg" alt="Brain MRI and CP Association" width="280" height="200">
+    </div>
+
+    <!-- Right Side Content -->
+    <div style="display: flex; flex-direction: column; width: 100%;">
+        <!-- Journal Name on Top Left -->
+        <div style="align-self: flex-start; font-size: 12px; font-weight: bold; color: red; 
+                    background: yellow; padding: 3px 8px; border-radius: 5px;">
+            La Radiologia Medica 2023
+        </div>
+
+        <!-- Title & Authors -->
+        <div>
+            <a href="https://doi.org/10.1007/s11547-024-01893-w" target="_blank" style="font-weight:bold;color:rgb(11,83,148)">
+                Trends in Brain MRI and CP Association Using Deep Learning</a><br />
+            <a href="#">M. Hassan</a>, 
+            <a href="#">J. Lin</a>, 
+            <a href="#">A. Ameen Fateh</a>, 
+            <a href="#">Y. Zhuang</a>, 
+            <a href="#">G. Lin</a>, 
+            <a href="https://cemse.kaust.edu.sa/profiles/dawar-khan"><b>Dawar Khan</b></a>, 
+            <a href="#">A. AQ Mohammed</a>, 
+            <a href="#">H. Zeng</a><br />
+
+            <a style="font-style:italic;color:black"> 
+                <em>La Radiologia Medica, vol. 129, pp. 1667–1681, Springer Milan, 2024</em>
+            </a> <br />
+
+            <a href="data:text/plain;charset=utf-8,@article{Hassan2024,
+  author    = {Muhammad Hassan and Jieqiong Lin and Ahmad Ameen Fateh and Yijiang Zhuang and Guisen Lin and Dawar Khan and Adam A. Q. Mohammed and Hongwu Zeng},
+  title     = {Trends in brain MRI and CP association using deep learning},
+  journal   = {La Radiologia Medica},
+  volume    = {129},
+  pages     = {1667--1681},
+  year      = {2024},
+  publisher = {Springer Milan},
+  doi       = {10.1007/s11547-024-01893-w},
+  url       = {https://doi.org/10.1007/s11547-024-01893-w}
+}" 
+               download="Hassan2024.bib" 
+               style="color:rgb(11,83,148)">
+               [Export BibTeX]
+            </a>
+        </div>
+    </div>
+</div>
+
 
 
 
