--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
             <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola">Ivan Viola</a><br />
 
             <a style="font-style:italic;color:red"> 
-                <em>IEEE VIS 2023 (Honorable Mention)</em>
+                <em>IEEE VIS 2023 (Honorable Mention), IEEE Transactions on Visualization and Computer Graphics</em>
             </a> <br />
 
             [<a href="https://www.nanovis.org/DrKID.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
