--- a/index.html
+++ b/index.html
@@ -349,9 +349,10 @@
 
             <a style="font-style:italic;color:red"> 
                 <em>IEEE VIS 2023 (Honorable Mention), IEEE Transactions on Visualization and Computer Graphics</em>
-            </a> <br />
-
-            [<a href="https://www.nanovis.org/DrKID.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
+            </a> 
+                <em>, IEEE Transactions on Visualization and Computer Graphics</em>
+           <br />
+            <a href="https://www.nanovis.org/DrKID.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
             [<a href="https://www.youtube.com/watch?v=1MByeDBLgK0" target="_blank" style="color:rgb(11,83,148)">Video</a>]
             [<a href="https://www.youtube.com/watch?v=sLQKDHY370A" target="_blank" style="color:rgb(11,83,148)">Presentation (11mins) </a>]
             [<a href="https://www.youtube.com/watch?v=c1LXU29s78A&t=557s" target="_blank" style="color:rgb(11,83,148)">Presentation (30 mins) </a>]
