--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
             <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola">Ivan Viola</a><br />
 
             <a style="font-style:italic;color:black"> 
-                <em>IEEE TVCG 2024</em>
+                <em>IEEE TVCG 2024, IEEE Transactions on Visualization and Computer Graphics, vol. 31, no. 1, pp. 558-568, Jan. 2025</em>
             </a> <br />
 
             [<a href="https://www.nanovis.org/DiffFit.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
@@ -348,9 +348,9 @@
             <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola">Ivan Viola</a><br />
 
             <a style="font-style:italic;color:red"> 
-                <em>IEEE VIS 2023 (Honorable Mention),</em>
+                <em>IEEE VIS 2023 (Honorable Mention)</em>
             </a> 
-                <em>, IEEE Transactions on Visualization and Computer Graphics</em>
+                <em>, IEEE Transactions on Visualization and Computer Graphics, vol. 30, no. 1, pp. 705-715, Jan. 2024</em>
            <br />
             <a href="https://www.nanovis.org/DrKID.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
             [<a href="https://www.youtube.com/watch?v=1MByeDBLgK0" target="_blank" style="color:rgb(11,83,148)">Video</a>]
