--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     I later served as an Assistant Professor at the University of Haripur, Pakistan, before joining KAUST.
 </p>
 <p style="color: black; text-align: justify;">
-    My research interests include computer graphics, visualization, VR, 3D deep learning, HCI, and human-AI interaction, with a recent focus on leveraging LLMs/VLMs for XR, 3D scene understanding, and HCI.
+    My research interests include computer graphics, computer vision, visualization, VR, 3D deep learning, HCI, and human-AI interaction, with a recent focus on leveraging LLMs/VLMs for XR, 3D scene understanding, and HCI.
 </p>
 
 <p style="text-align: center; font-size: 16px; color: red; font-weight: bold;"> ** I am actively seeking a faculty or research scientist  position.</p>
