--- a/index.html
+++ b/index.html
@@ -222,6 +222,56 @@
 </div>
 
 
+<!-- GHAR Paper -->
+<div style="display: flex; align-items: flex-start; margin-top: 20px;">
+    <!-- Image -->
+    <div style="margin-right: 10px;">
+        <img src="./images/ghar.JPG" alt="GHAR" width="290" height="200">
+    </div>
+
+    <!-- Right Side Content -->
+    <div style="display: flex; flex-direction: column; width: 100%;">
+        <!-- Journal Name on Top Left -->
+        <div style="align-self: flex-start; font-size: 12px; font-weight: bold; color: red; background: yellow; padding: 3px 8px; border-radius: 5px;">
+            arXiv 2025
+        </div>
+
+        <!-- Title & Authors -->
+        <div>
+            <a href="https://arxiv.org/abs/2506.14414" target="_blank" style="font-weight:bold;color:rgb(11,83,148)">
+                GHAR: GeoPose-based Handheld Augmented Reality for Architectural Positioning, Manipulation and Visual Exploration</a><br /> 
+            <a href=""  target="_blank">Sabahat Israr</a>,
+            <a href="https://cemse.kaust.edu.sa/profiles/dawar-khan"  target="_blank"><b>Dawar Khan<sup>*</sup></b></a>, 
+            <a href=""  target="_blank">Zhanglin Cheng</a>,
+            <a href=""  target="_blank">Mukhtaj Khan</a>,
+            <a href="https://carelab.info/en/kiyoshi-kiyokawa/"  target="_blank">Kiyoshi Kiyokawa</a>,
+            <br />
+
+            <a style="font-style:italic;color:black"> 
+                <em>arXiv preprint, <a href="https://arxiv.org/abs/2506.14414">https://arxiv.org/abs/2506.14414</a>, (2025)</em>
+            </a><br />
+
+            <!-- Optional project links (add if available) -->
+            <!--
+            [<a href="#" target="_blank" style="color:rgb(11,83,148)">Project</a>]
+            [<a href="#" target="_blank" style="color:rgb(11,83,148)">Video</a>]
+            [<a href="#" target="_blank" style="color:rgb(11,83,148)">Source code</a>]
+            -->
+
+            <a href="data:text/plain;charset=utf-8,@misc{israr2025ghargeoposebasedhandheldaugmented,
+      title={GHAR: GeoPose-based Handheld Augmented Reality for Architectural Positioning, Manipulation and Visual Exploration}, 
+      author={Sabahat Israr and Dawar Khan and Zhanglin Cheng and Mukhtaj Khan and Kiyoshi Kiyokawa},
+      year={2025},
+      eprint={2506.14414},
+      archivePrefix={arXiv},
+      primaryClass={cs.GR},
+      url={https://arxiv.org/abs/2506.14414}
+}" download="GHAR2025.bib" style="color:rgb(11,83,148)">[Export BibTeX]</a>
+        </div>
+    </div>
+</div>
+
+
 
 <!-- Biomedical Image Segmentation Paper --> 
  <!-- Biomedical Image Segmentation Paper -->
