--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 <div style="display: flex; align-items: flex-start; margin-top: 20px;">
     <!-- Image -->
     <div style="margin-right: 10px;">
-        <img src="./images/ghar.JPG" alt="GHAR" width="290" height="200">
+        <img src="./images/ghar.jpg" alt="GHAR" width="290" height="200">
     </div>
 
     <!-- Right Side Content -->
