--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <!-- Title & Authors -->
         <div>
             <a href="https://arxiv.org/abs/2405.19339" target="_blank" style="font-weight:bold;color:rgb(11,83,148)">
-                MidSurfer: A Parameter-Free Approach for Mid-Surface Extraction</a><br />
+                MidSurfer: A Parameter-Free Approach for Mid-Surface Extraction from Segmented Volumetric Data</a><br />
             <a href="https://cemse.kaust.edu.sa/profiles/eva-bones">Eva Boneš<sup>#</sup></a>, 
             <a href="https://cemse.kaust.edu.sa/profiles/dawar-khan"><b>Dawar Khan<sup>#</sup></b></a>,    
             <a href="https://www.fri.uni-lj.si/en/about-faculty/employees/ciril-bohak">Ciril Bohak</a>, 
