--- a/index.html
+++ b/index.html
@@ -86,6 +86,10 @@
     <a href="http://people.ucas.ac.cn/~zhangxiaopeng?language=en" target="_blank">Prof. Xiaopeng Zhang</a> 
     and 
     <a href="http://sites.google.com/site/yandongming/" target="_blank">Prof. Dong-Ming Yan</a>, in 2018. 
+    I got the 
+<span style="color:red">
+    2018 Excellent International Graduates Award
+</span> from UCAS.
     Soon after completing my Ph.D., I worked as an Assistant Professor with 
     <a href="https://imdl.naist.jp/people/hirokazukato/" target="_blank">Prof. Hirokazu Kato</a> 
     (the inventor of ARToolKit) at the 
@@ -97,7 +101,10 @@
     My research interests include computer graphics, computer vision, visualization, VR, 3D deep learning, HCI, and human-AI interaction, with a recent focus on leveraging LLMs/VLMs for XR, 3D scene understanding, and HCI.
 </p>
 
-<p style="text-align: center; font-size: 16px; color: red; font-weight: bold;"> ** I am actively seeking a faculty or research scientist  position.</p>
+<p style="text-align: center; font-size: 16px; color: red; font-weight: bold;">
+    *** I am actively seeking a faculty or researcher position.
+</p>
+
 <div style="display: flex; align-items: center; justify-content: flex-end; gap: 15px;">
     <p style="color: black; margin: 0;"> <b>Connect with Me:</b> </p>
     <ul class="icons" style="display: flex; list-style: none; padding: 0; margin: 0; gap: 10px; align-items: center;">
@@ -396,9 +403,9 @@
             <a href="https://cemse.kaust.edu.sa/profiles/ciril-bohak">Ciril Bohak</a>, 		
             <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola">Ivan Viola</a><br />
 
-            <a style="font-style:italic;color:red"> 
-                <em>IEEE VIS 2023 (Honorable Mention)</em>
-            </a> 
+            <a style="font-style:italic; color:red">
+    <em>IEEE VIS 2023 (Honorable Mention Best Paper Award)</em>
+</a>
                 <em>, IEEE Transactions on Visualization and Computer Graphics, vol. 30, no. 1, pp. 705-715, Jan. 2024</em>
            <br />
             <a href="https://www.nanovis.org/DrKID.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
