--- a/index.html
+++ b/index.html
@@ -86,10 +86,7 @@
     <a href="http://people.ucas.ac.cn/~zhangxiaopeng?language=en" target="_blank">Prof. Xiaopeng Zhang</a> 
     and 
     <a href="http://sites.google.com/site/yandongming/" target="_blank">Prof. Dong-Ming Yan</a>, in 2018. 
-    I got the 
-<span style="color:red">
-    2018 Excellent International Graduates Award
-</span> from UCAS.
+   I was honored with the <span style="color:red;">2018 Excellent International Graduates Award</span> from UCAS.
     Soon after completing my Ph.D., I worked as an Assistant Professor with 
     <a href="https://imdl.naist.jp/people/hirokazukato/" target="_blank">Prof. Hirokazu Kato</a> 
     (the inventor of ARToolKit) at the 
