--- a/index.html
+++ b/index.html
@@ -157,10 +157,13 @@
             <a style="font-style:italic;color:black"> 
                 <em>arXiv preprint, <a href="https://arxiv.org/abs/2502.15761">https://arxiv.org/abs/2502.15761</a>, (2025)</em>
             </a> <br />
+  [<a href="https://www.nanovis.org/Loxr.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
+  [<a href="https://github.com/nanovis/LoXR" target="_blank" style="color:rgb(11,83,148)">Source Code </a>]
+  [<a href="https://youtu.be/7TrXLekrEyI" target="_blank" style="color:rgb(11,83,148)">Video </a>] 
+  [<a href="https://ieeexplore.ieee.org/abstract/document/10973004" target="_blank" style="color:rgb(11,83,148)">Poster (IEEE VR 2025)</a>]
+  [<a href="https://arxiv.org/abs/2502.15761" target="_blank" style="color:rgb(11,83,148)">Paper (arXiv)</a>]
 
-            [<a href="https://www.nanovis.org/Loxr.html" target="_blank" style="color:rgb(11,83,148)">Project</a>]
-            [<a href="https://www.youtube.com/watch?v=7TrXLekrEyI" target="_blank" style="color:rgb(11,83,148)">Video</a>]
-            [<a href="https://www.nanovis.org/Loxr.html" target="_blank" style="color:rgb(11,83,148)">Source code</a>]
+
 
             <a href="data:text/plain;charset=utf-8,@article{LoXR2025,
                 author    = {Dawar Khan and Xinyu Liu and Omar Mena and Donggang Jia and Alexandre Kouyoumdjian and Ivan Viola},
