--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 </p>
 <p style="color: black; text-align: justify;">
     My research interests include computer graphics, computer vision, visualization, VR, 3D deep learning, HCI, and human-AI interaction, with a recent focus on leveraging LLMs/VLMs for XR, 3D scene understanding, 
-    and HCI (<a href="https://www.nanovis.org/AI4XR.html" target="_blank" style="font-weight:bold;color:rgb(11,83,148)">AI in XR</a>).
+    and HCI (<a href="https://www.nanovis.org/AI4XR.html" target="_blank" style="font-weight:bold;color:rgb(11,83,148)">AI4XR</a>).
 </p>
 
 <p style="text-align: center; font-size: 16px; color: red; font-weight: bold;">
