--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <a href="http://people.ucas.ac.cn/~zhangxiaopeng?language=en" target="_blank">Prof. Xiaopeng Zhang</a> 
     and 
     <a href="http://sites.google.com/site/yandongming/" target="_blank">Prof. Dong-Ming Yan</a>, in 2018. 
-   I was honored with the <span style="color:red;">2018 Excellent International Graduate Award</span> from UCAS.
+   I was honored with the <span style="color:red;">&#x1f3c5; 2018 Excellent International Graduate Award</span> from UCAS.
     Soon after completing my Ph.D., I worked as an Assistant Professor with 
     <a href="https://imdl.naist.jp/people/hirokazukato/" target="_blank">Prof. Hirokazu Kato</a> 
     (the inventor of ARToolKit) at the 
@@ -491,7 +491,7 @@
             <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola">Ivan Viola</a><br />
 
             <a style="font-style:italic; color:red">
-    <em>IEEE VIS 2023 (Honorable Mention Best Paper Award)</em>
+    <em>IEEE VIS 2023 (&#x1f3c5; Best Paper Honorable Mention Award )</em>
 </a>
                 <em>, IEEE Transactions on Visualization and Computer Graphics, vol. 30, no. 1, pp. 705-715, Jan. 2024</em>
            <br />
