--- a/index.html
+++ b/index.html
@@ -74,11 +74,15 @@
                     <header>
                         <h2  style=  "color: black;"><b>Biography</b></h2>
                     </header> 
- <p style="color: black; text-align: justify;">
-    I am working as a Postdoctoral Researcher with 
+ <p style="color: black; text-align: justify;"> 
+    
+    I recently completed my postdoctoral research with 
     <a href="https://cemse.kaust.edu.sa/profiles/ivan-viola" target="_blank">Professor Ivan Viola</a> 
     in the <a href="https://www.nanovis.org/" target="_blank">Nanovisualization Research Group</a> at 
-    <a href="https://www.kaust.edu.sa/en/" target="_blank">KAUST</a>, Saudi Arabia. 
+    <a href="https://www.kaust.edu.sa/en/" target="_blank">KAUST</a>, Saudi Arabia.  
+    I am currently working as an <strong>Assistant Professor (temporary)</strong> at the 
+    <a href="https://uoh.edu.pk/" target="_blank">University of Haripur (UOH)</a>, Pakistan, 
+    and seeking new opportunities for research or faculty positions.
     I earned my Ph.D. in Computer Science from the 
     <a href="http://nlpr-web.ia.ac.cn/" target="_blank">National Laboratory of Pattern Recognition (NLPR)</a>, 
     <a href="http://english.ia.cas.cn/" target="_blank">Institute of Automation, Chinese Academy of Sciences (CASIA)</a>, 
